# simuliris

./: .Makefile.coq.d  .gitignore  .gitlab-ci.yml  Makefile  Makefile.coq.conf  Makefile.coq.local  README.md  _CoqProject  _opam  coq-simuliris.opam  flake.nix
theories/base_logic/: gen_heap_bij.v  gen_sim_heap.v  gen_sim_prog.v
theories/logic/: fixpoints.v  satisfiable.v
theories/playground/: fixpoints.v  language.v  pure_threadpool_sim.v
theories/simplang/: adequacy.v  base.v  behavior.v  class_instances.v  ctx.v  derived.v  gen_adequacy.v  gen_global_rel.v  gen_log_rel.v  gen_refl.v  gen_val_rel.v  ghost_state.v  globalbij.v  heap_bij.v  heap_bij_races.v  heapbij.v  heapbij_races_refl.v  heapbij_refl.v  lang.v  locations.v  log_rel.v  log_rel_structural.v  logical_heap.v  notation.v  open_expr_rel.v  parallel_subst.v  primitive_laws.v  proofmode.v  pure_refl.v  tactics.v  val_rel.v  wf.v
theories/simulang/: base.v  behavior.v  class_instances.v  gen_adequacy.v  gen_refl.v  gen_val_rel.v  globalbij.v  heapbij.v  hoare.v  lang.v  locations.v  log_rel_structural.v  logical_heap.v  notation.v  primitive_laws.v  proofmode.v  pure_refl.v  tactics.v  wf.v
theories/simulation/: .language.aux  adequacy.v  behavior.v  closed_sim.v  fairness.v  fairness_adequacy.v  gen_log_rel.v  global_sim.v  language.glob  language.v  language.vo  lifting.v  nostutter_adequacy.v  relations.v  simulation.v  slsls.v  slsls_nostutter.v  stutter_adequacy.v
theories/stacked_borrows/: adequacy.v  behavior.v  bor_semantics.v  class_instances.v  defs.v  expr_semantics.v  heap.v  helpers.v  inv_accessors.v  lang.v  lang_base.v  locations.v  log_rel.v  log_rel_structural.v  logical_state.v  refl.v  (+17 more)
(+162 files in other folders)
