opam-version: "2.0"
maintainer: "Homer Simpson <homer@simpson.org>"
authors: "Simuliris Authors"
homepage: "http://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/iris/simuliris/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/simuliris.git"

synopsis: "Local Simulation proofs, the Iris style"

depends: [
  "coq-iris" { (= "dev.2024-10-30.0.27f837c1") | (= "dev") }
  "coq-equations" { (= "1.3+8.19") | (= "1.3.1+8.20") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
