opam-version: "2.0"
maintainer: "Ralf Jung <jung@mpi-sws.org>"
authors: "Simuliris Authors"
homepage: "http://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/iris/simuliris/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/simuliris.git"

synopsis: "Local Simulation proofs, the Iris style"

depends: [
  "coq-iris" { (= "dev.2025-07-20.0.306d8d02") | (= "dev") }
  "coq-equations" { (= "1.3+8.19") | (= "1.3.1+8.20") | (= "1.3.1+9.0") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
