opam-version: "2.0"
maintainer: "Ralf Jung <jung@mpi-sws.org>"
authors: "Simuliris Authors"
homepage: "http://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/iris/simuliris/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/simuliris.git"

synopsis: "Local Simulation proofs, the Iris style"

depends: [
  "rocq-iris" { (= "dev.2026-01-28.1.95e7cff5") | (= "dev") }
  "rocq-equations" { (= "1.3.1+9.0") | (= "1.3.1+9.1") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
